Fix rendering on mobile

--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -5,4 +5,6 @@ input {
   padding: 10px 20px;
   font-size: 1.5rem;
   font-weight: 200;
+  -webkit-appearance: none;
+  border-radius: 0;
 }
